change pic height

--- a/CleanBanditStation/index.html
+++ b/CleanBanditStation/index.html
@@ -154,7 +154,7 @@
                     </a>
                 </div>
                 
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6" style="height: 316px;">
                     <a href="#" class="portfolio-box">
                         <img src="img/portfolio/bandit3.jpg" class="img-responsive" alt="">
                         
