--- a/CleanBanditStation/index.html
+++ b/CleanBanditStation/index.html
@@ -154,9 +154,9 @@
                     </a>
                 </div>
                 
-                <div class="col-lg-4 col-sm-6" style="height: 316px;">
+                <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/bandit3.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/bandit3.jpg" class="img-responsive"  style="height: 316px;" alt="">
                         
                     </a>
                 </div>
